data/derived/fa15/progs/unify/prog2179.ml.out
Characters 442-444:
  | 6 -> 0.
         ^^
Error: This expression has type float but an expression was expected of type
         expr
